# xraygpt

./: .gitignore  README.md  REFERENCES.md  pyproject.toml  requirements.txt
configs/: base.yaml
demo/: app.py
docs/: architecture_blog.md
scripts/: download_iu_xray.py  evaluate.py  train.py
src/api/: app.py
src/data/: __init__.py  dataset.py  preprocessing.py
src/inference/: generate.py
src/models/: __init__.py  projection.py  report_decoder.py  vision_encoder.py  xraygpt.py
src/training/: evaluate.py  trainer.py
src/utils/: config.py  logging.py  seed.py
tests/: test_config.py  test_model.py  test_preprocessing.py
